--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,6 @@ on:
 env:
   PYTHON_VERSION: '3.9'
 
-# SECURITY: จำกัดสิทธิ์ตาม Least Privilege Principle
 permissions:
   contents: read
   packages: write
@@ -18,7 +17,6 @@ permissions:
   actions: read
 
 jobs:
-  # Job ที่ 1: ทดสอบโค้ด
   test:
     name: Run Tests
     runs-on: ubuntu-latest
@@ -27,13 +25,13 @@ jobs:
       postgres:
         image: postgres:16-alpine
         env:
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          POSTGRES_PASSWORD: testpass
+          POSTGRES_USER: testuser
+          POSTGRES_DB: testdb
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U $POSTGRES_USER "
+          --health-cmd "pg_isready -U testuser"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -63,27 +61,33 @@ jobs:
           cd backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest-cov
 
-      - name: Set up test environment
+      - name: Install Redis CLI
         run: |
-          echo "DATABASE_URL=postgresql://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/${{ secrets.POSTGRES_DB }}" >> $GITHUB_ENV
-          echo "REDIS_URL=redis://localhost:6379" >> $GITHUB_ENV
-          echo "FLASK_ENV=testing" >> $GITHUB_ENV
+          sudo apt-get update
+          sudo apt-get install -y redis-tools
 
       - name: Wait for services
         run: |
-          timeout 60 bash -c 'until pg_isready -h localhost -p 5432 -U ${{ secrets.POSTGRES_USER }}; do sleep 2; done'
+          echo "Waiting for PostgreSQL..."
+          timeout 60 bash -c 'until pg_isready -h localhost -p 5432 -U testuser; do sleep 2; done'
           echo "✅ PostgreSQL is ready!"
+          
+          echo "Waiting for Redis..."
           timeout 60 bash -c 'until redis-cli -h localhost -p 6379 ping | grep -q PONG; do sleep 2; done'
           echo "✅ Redis is ready!"
 
       - name: Run tests with coverage
         run: |
           cd backend
-          pytest tests/ -v --cov=. --cov-report=xml --cov-report=html
+          export PYTHONPATH=.
+          export DATABASE_URL="postgresql://testuser:testpass@localhost:5432/testdb"
+          export REDIS_URL="redis://localhost:6379"
+          export FLASK_ENV=testing
+          pytest tests/ -v --cov=. --cov-report=xml --cov-report=html --cov-report=term
         env:
-          DATABASE_URL: ${{ env.DATABASE_URL }}
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SECRET_KEY: test-secret-key
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
@@ -93,10 +97,18 @@ jobs:
           path: backend/htmlcov/
           retention-days: 5
 
-  # Job ที่ 2: Security Scanning ด้วย Snyk
+      - name: Upload coverage XML
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-xml
+          path: backend/coverage.xml
+          retention-days: 5
+
   security-snyk:
     name: Snyk Security Scan
     runs-on: ubuntu-latest
+    needs: test
     
     steps:
       - name: Checkout code
@@ -113,7 +125,6 @@ jobs:
           cd backend
           pip install -r requirements.txt
 
-      # SCA - Dependencies Scan
       - name: Run Snyk Dependencies Scan
         uses: snyk/actions/python@master
         continue-on-error: true
@@ -123,35 +134,29 @@ jobs:
           args: --severity-threshold=high --file=backend/requirements.txt
           command: test
 
-      # SAST - Code Scan
       - name: Run Snyk Code Scan
         uses: snyk/actions/python@master
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=medium --sarif-file-output=snyk-code.sarif
+          args: --severity-threshold=medium
           command: code test
-
-      - name: Upload SARIF to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: snyk-code.sarif
 
       - name: Monitor with Snyk
         if: github.ref == 'refs/heads/main'
         uses: snyk/actions/python@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --file=backend/requirements.txt
           command: monitor
 
-  # Job ที่ 3: Additional Security Scans
   security-additional:
     name: Additional Security Scans
     runs-on: ubuntu-latest
+    needs: test
     
     steps:
       - name: Checkout code
@@ -174,7 +179,7 @@ jobs:
 
       - name: Run Bandit SAST
         run: |
-          pip install bandit[toml]
+          pip install bandit
           cd backend
           bandit -r . -f json -o bandit-report.json -ll || echo "⚠️ Bandit warnings found"
         continue-on-error: true
@@ -183,7 +188,6 @@ jobs:
         uses: returntocorp/semgrep-action@v1
         with:
           config: auto
-          generateSarif: "1"
         continue-on-error: true
 
       - name: Secret Scanning with TruffleHog
@@ -193,6 +197,7 @@ jobs:
           base: ${{ github.event.repository.default_branch }}
           head: HEAD
           extra_args: --only-verified
+        continue-on-error: true
 
       - name: Upload security artifacts
         uses: actions/upload-artifact@v4
@@ -204,19 +209,13 @@ jobs:
             backend/bandit-report.json
           retention-days: 30
 
-  # Job ที่ 4: Build Docker Image
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
     needs: [test, security-snyk, security-additional]
     if: |
       always() && 
-      needs.test.result == 'success' && 
-      (needs.security-snyk.result == 'success' || needs.security-snyk.result == 'skipped')
-
-    env:
-      REGISTRY: ghcr.io
-      IMAGE_NAME: ${{ github.repository }}
+      needs.test.result == 'success'
 
     steps:
       - name: Checkout code
@@ -228,46 +227,51 @@ jobs:
       - name: Log in to Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
+      - name: Prepare Docker metadata
         id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
+        run: |
+          REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME="ghcr.io/${REPO_LOWER}"
+          
+          # Generate tags
+          TAGS="${IMAGE_NAME}:sha-${{ github.sha }}"
+          
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            TAGS="${TAGS},${IMAGE_NAME}:pr-${{ github.event.pull_request.number }}"
+          elif [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            TAGS="${TAGS},${IMAGE_NAME}:latest"
+          elif [ "${{ github.ref }}" == "refs/heads/develop" ]; then
+            TAGS="${TAGS},${IMAGE_NAME}:develop"
+          fi
+          
+          echo "tags=${TAGS}" >> $GITHUB_OUTPUT
+          echo "image_name=${IMAGE_NAME}" >> $GITHUB_OUTPUT
+          
+          echo "🏷️ Tags: ${TAGS}"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Run Trivy container scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          image-ref: ${{ steps.meta.outputs.image_name }}:sha-${{ github.sha }}
+          format: 'table'
+          exit-code: '0'
+          severity: 'CRITICAL,HIGH'
+        continue-on-error: true
 
-      - name: Upload Trivy results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
-
-  # Job ที่ 5: Notify Results
   notify:
     name: Notify Results
     runs-on: ubuntu-latest
@@ -292,19 +296,23 @@ jobs:
               'skipped': '⏭️'
             };
             
-            const comment = \`
+            const comment = `
             ## 🚀 CI/CD Pipeline Results
             
             | Job | Status | Result |
             |-----|--------|---------|
-            | Tests | \${statusEmoji[testStatus] || '❓'} | \${testStatus} |
-            | Snyk Security | \${statusEmoji[snykStatus] || '❓'} | \${snykStatus} |
-            | Additional Security | \${statusEmoji[additionalSecurityStatus] || '❓'} | \${additionalSecurityStatus} |
-            | Docker Build | \${statusEmoji[buildStatus] || '❓'} | \${buildStatus} |
+            | Tests | ${statusEmoji[testStatus] || '❓'} | ${testStatus} |
+            | Snyk Security | ${statusEmoji[snykStatus] || '❓'} | ${snykStatus} |
+            | Additional Security | ${statusEmoji[additionalSecurityStatus] || '❓'} | ${additionalSecurityStatus} |
+            | Docker Build | ${statusEmoji[buildStatus] || '❓'} | ${buildStatus} |
             
-            **Commit**: \\\`${{ github.sha }}\\\`
-            **Branch**: \\\`${{ github.head_ref }}\\\`
-            \`;
+            **Commit**: \`${{ github.sha }}\`
+            **Branch**: \`${{ github.head_ref }}\`
+            **Triggered by**: @${{ github.actor }}
+            
+            ---
+            📊 [View detailed results](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            `;
             
             github.rest.issues.createComment({
               issue_number: context.issue.number,
@@ -315,8 +323,9 @@ jobs:
 
       - name: Print summary
         run: |
-          echo "=== Pipeline Summary ==="
-          echo "Test: ${{ needs.test.result }}"
-          echo "Snyk: ${{ needs.security-snyk.result }}"
-          echo "Security: ${{ needs.security-additional.result }}"
-          echo "Build: ${{ needs.build.result }}"
+          echo "=== 🎯 Pipeline Summary ==="
+          echo "✓ Test: ${{ needs.test.result }}"
+          echo "✓ Snyk: ${{ needs.security-snyk.result }}"
+          echo "✓ Security: ${{ needs.security-additional.result }}"
+          echo "✓ Build: ${{ needs.build.result }}"
+          echo "=========================="
